--- a/app/templates/upload_files.html
+++ b/app/templates/upload_files.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Upload new File</h1>
         <form action="/upload_file_test" method="POST" enctype=multipart/form-data>
-            <input type=file name=file>
+            <input type=file name=file multiple>
             <input type=submit value=Upload>
         </form>
     </body>
