--- a/app/templates/setup_teacher.html
+++ b/app/templates/setup_teacher.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="container-xxl my-4 bd-layout">
   <h1>Set Up Teacher Profile</h1>
-  <form action="/view_teacherprofile", method="POST">
+  <form action="/update_teacherprofile", method="POST">
     <div class="row">
         <div class="col-3">
           <label for="prefixes">(Prefix)</label>
@@ -43,7 +43,7 @@
     <thead>
         <tr>
           <th>Period</th>
-          <th>Class Taught (If Any)</th>
+          <th>Room Number</th>
           <th>Status</th>
         </tr>
       </thead>
