--- a/app/templates/view_teacherprofile.html
+++ b/app/templates/view_teacherprofile.html
@@ -15,7 +15,7 @@
     <thead>
       <tr>
         <th>Period</th>
-        <th>Class Taught (If Any)</th>
+        <th>Room Number</th>
         <th>Status</th>
       </tr>
     </thead>
@@ -23,8 +23,8 @@
       {% for i in range(1, 11) %}
       <tr>
         <td>{{ i }}</td>
-        <td>{{ class }}</td>
-        <td>{{ status }}</td>
+        <td>{{ schedule[i - 1][0] }}</td>
+        <td>{{ schedule[i - 1][1] }}</td>
       </tr>
       {% endfor %}
     </tbody>
