--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,21 +18,24 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">      
-            <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Starred Teachers
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              {% if starred %}
-                {% for teacher in starred %}
-                <li><a class="dropdown-item" href="">{{ teacher }}</a></li>
-                {% endfor %}
-              {% else %}
-                <li class="dropdown-item disabled">No starred teachers yet!</li>
-              {% endif %}
-            </ul>
-            </li>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">   
+            {% if "google_id" in session %}
+              <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Starred Teachers
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                {% if starred %}
+                  {% for teacher in starred %}
+                  <li><a class="dropdown-item" href="">{{ teacher }}</a></li>
+                  {% endfor %}
+                {% else %}
+                  <li class="dropdown-item disabled">No starred teachers yet!</li>
+                {% endif %}
+              </ul>
+              </li>
+            {% endif %}   
+
   
             {% if session["name"] in teacher_list %}
               <li class="nav-item">
@@ -51,6 +54,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
               </li>
+            
               {% else %}
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('login') }}">Login</a>
