--- a/app/templates/view_teacherprofile.html
+++ b/app/templates/view_teacherprofile.html
@@ -3,6 +3,18 @@
 <!-- THIS IS WHERE TEACHERS CAN SEE THEIR OWN PROFILE -->
 {% block title %}View Your Profile{% endblock %}
 
+{% block links %}
+
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('edit_teacherprofile') }}">Edit Profile</a>
+      </li>
+  </ul>
+</div>
+
+{% endblock %}
+
 {% block content %}
 <div class="container-xxl my-4 bd-layout">
   <h1>View Your Profile</h1>
