--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,12 +38,7 @@
 
   
             {% if session["name"] in teacher_list %}
-              <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('edit_teacherprofile') }}">Edit Profile</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('view_teacherprofile') }}">View Profile</a>
-              </li>
+              {% block links %}{% endblock %}
             {% endif %} 
           </ul>
         </div>
