--- a/app/templates/student.html
+++ b/app/templates/student.html
@@ -3,7 +3,24 @@
 
 {% block content %}
 <div class="container-xxl my-4 bd-layout">
-  <h1>Set Up Student Profile</h1>
+  <h1>Starred Teachers</h1>
+  <table>
+    <tr> 
+      <th>Teacher</th>
+      <th>Classes Taught</th>
+      <th>More Information</th>
+    </tr>
+    {% for teacher in starred_teachers %}
+    <tr>
+      <td>{{teacher}}</td>
+      <td>{{classes}}</td>
+      <td></td> <!-- this will link to the teacher's profile -->
+    </tr>
+    {% endfor %}
+  </table>
+
+
+  <h1>Edit Profile</h1>
   <form action="/student" method="POST">
     <table>
       <tr> 
