--- a/app/templates/view_files.html
+++ b/app/templates/view_files.html
@@ -7,8 +7,8 @@
 
     <body>
         <h1>View Files</h1>
-        {% for file in files %}
-        <a href={{url_for("download_file", filename=file)}}>{{file}}</a>
+        {% for id, filename in files %}
+        <a href={{url_for("download_file", file_id=id)}}>{{filename}}</a>
         {% endfor %}
     </body>
 
