--- a/app/templates/view_teacherprofile.html
+++ b/app/templates/view_teacherprofile.html
@@ -6,40 +6,44 @@
 {% block links %}
 
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('edit_teacherprofile') }}">Edit Profile</a>
-      </li>
-  </ul>
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('edit_teacherprofile') }}">Edit Profile</a>
+        </li>
+    </ul>
 </div>
 
 {% endblock %}
 
 {% block content %}
 <div class="container-xxl my-4 bd-layout">
-  <h1>View Your Profile</h1>
-  <p>Name: {{prefix}} {{name}}</p>
-  <p>Pronouns: {{pronouns}}</p>
-  <p>(Preferred) Email(s): {{email}}</p>
-  <p>Important Files (i.e. syllabi):</p>
+    <h1>View Your Profile</h1>
+    <p>Name: {{prefix}} {{name}}</p>
+    <p>Pronouns: {{pronouns}}</p>
+    <p>(Preferred) Email(s): {{email}}</p>
+    <p>Important Files (i.e. syllabi):</p>
 
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Period</th>
-        <th>Room Number</th>
-        <th>Status</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for i in range(1, 11) %}
-      <tr>
-        <td>{{ i }}</td>
-        <td>{{ schedule[i - 1][0] }}</td>
-        <td>{{ schedule[i - 1][1] }}</td>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
+    {% for id, filename in files %}
+    <a href={{url_for("download_file", file_id=id)}}>{{filename}}</a>
+    {% endfor %}
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Period</th>
+                <th>Room Number</th>
+                <th>Status</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for i in range(1, 11) %}
+            <tr>
+                <td>{{ i }}</td>
+                <td>{{ schedule[i - 1][0] }}</td>
+                <td>{{ schedule[i - 1][1] }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 </div>
 {% endblock %}
