starring teachers works

--- a/app/templates/student.html
+++ b/app/templates/student.html
@@ -8,12 +8,11 @@
     <tr> 
       <th>Teacher</th>
       <th>Classes Taught</th>
-      <th>More Information</th>
     </tr>
-    {% for teacher in starred_teachers %}
+    {% for teacher_id, teacher_name, classes_taught in starred_teachers %}
     <tr>
-      <td>{{teacher}}</td>
-      <td>{{classes}}</td>
+      <td><a href={{'/view_teacher/%s' % teacher_name}}>{{teacher_name}}</a></td> <!-- this will link to the teacher's profile -->
+      <td>{{classes_taught}}</td>
       <td></td> <!-- this will link to the teacher's profile -->
     </tr>
     {% endfor %}
@@ -27,16 +26,14 @@
         <th>Star</th>
         <th>Teacher</th>
         <th>Classes Taught</th>
-        <th>More Information</th>
       </tr>
       {% for teacher in teacher_list %}
       <tr>
         <td>
-          <input type="checkbox" name="starred" value={{teacher}}>
+          <input type="checkbox" name="starred_id" value={{teacher[0]}}>
         </td>
-        <td>{{teacher}}</td>
-        <td>{{classes}}</td>
-        <td></td> <!-- this will link to the teacher's profile -->
+        <td><a href={{'/view_teacher/%s' % teacher[1]}}>{{teacher[1]}}</a></td> <!-- this will link to the teacher's profile -->
+        <td>{{teacher[3], teacher[4], teacher[5], teacher[6], teacher[7], teacher[8], teacher[9], teacher[10], teacher[11], teacher[12]}}</td>
       </tr>
       {% endfor %}
     </table>
