cleaned up student route

--- a/app/templates/student.html
+++ b/app/templates/student.html
@@ -16,10 +16,10 @@
       <td></td> <!-- this will link to the teacher's profile -->
     </tr>
     {% endfor %}
-  </table>
+  </table> <br>
 
 
-  <h1>Edit Profile</h1>
+  <h1>Find Teachers To Star</h1>
   <form action="/student" method="POST">
     <table>
       <tr> 
