--- a/app/templates/edit_teacherprofile.html
+++ b/app/templates/edit_teacherprofile.html
@@ -67,9 +67,9 @@
                 {% for i in range(1, 11) %}
                 <tr>
                     <td>{{ i }}</td>
-                    <td><input type="text" name="class{{ i }}" class="form-control"></td>
+                    <td><input type="text" name="class{{ i }}" value="{{schedule[i-1][0]}}"" class="form-control"></td>
                     <td>
-                        <select name="status{{ i }}" class="form-control form-select">
+                        <select name="status{{ i }}" value="{{schedule[i-1][1]}}" class="form-control form-select">
                             <option>Never free (teaching)</option>
                             <option>Never free (working/lunch/etc)</option>
                             <option>Free for walk-ins</option>
