--- a/app/templates/view_teacherprofile.html
+++ b/app/templates/view_teacherprofile.html
@@ -3,24 +3,10 @@
 <!-- THIS IS WHERE TEACHERS CAN SEE THEIR OWN PROFILE -->
 {% block title %}View Your Profile{% endblock %}
 
-{% block links %}
-
-{% if session["name"] in teacher_list %}
-<div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('edit_teacherprofile') }}">Edit Profile</a>
-        </li>
-    </ul>
-</div>
-{% endif %}
-
-{% endblock %}
-
 {% block content %}
 <div class="container-xxl my-4 bd-layout">
   <h1>Your Profile</h1>
-  {% if session["name"] in teacher_list %}
+  {% if is_teacher %}
   <p><a href="{{ url_for('edit_teacherprofile') }}">Edit Profile</a></p>
   {% endif %}
   {% if prefix == "None" %}
