--- a/app/templates/student.html
+++ b/app/templates/student.html
@@ -18,7 +18,7 @@
           <input type="hidden" name="remove_star" value={{teacher_id}}>
         </form>
       </td>
-      <td><a href="/view_teacher/{{teacher[1]}}">{{teacher_name}}</a></td> <!-- this will link to the teacher's profile -->
+      <td><a href="/view_teacher/{{teacher_name}}">{{teacher_name}}</a></td> <!-- this will link to the teacher's profile -->
       <td>{{classes_taught}}</td>
       <td></td> <!-- this will link to the teacher's profile -->
     </tr>
