Remove period from csv template

--- a/app/templates/edit_teacherprofile.html
+++ b/app/templates/edit_teacherprofile.html
@@ -87,8 +87,9 @@
               </p>
               <p>  
                 This should consist of a file containing the following headers:
-                "period", "room_number", and "status" (see example
+                "room_number" and "status" (see example
                 <a href="{{ url_for('static', filename='template.csv') }} ">here</a>).
+                Make sure you have all of the periods listed in order.
                 For status, you can either use one of the dropdown options
                 above, create your own, or, if left blank, we'll use "Never
                 free (teaching)" or "Free for walk-ins" by default.
