Update initial landing page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,6 +3,19 @@
 
 {% block content %}
 <div class="container-xxl my-4 bd-layout">
-  <h1>Hello, you have entered our site</h1>
+  <h1>Welcome to TeacherTally!</h1>
+  <p>
+    TeacherTally is an app designed for Stuyvesant students and teachers to
+    make sharing important teacher information easily. With TeacherTally,
+    teachers can share and students can find:
+  </p>
+  <ul>
+    <li>Teacher schedules and office hours</li>
+    <li>Contact information</li>
+    <li>Syllabi and other important documents</li>
+  </ul>
+  <p>
+    To get started, login with your stuy.edu Google account.
+  </p>
 </div>
 {% endblock %}
