--- a/app/templates/student.html
+++ b/app/templates/student.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
-{% block title %} Student Profile{% endblock %}
+{% block title %}Student Profile{% endblock %}
 
 {% block content %}
 <div class="container-xxl my-4 bd-layout">
+  <p>Are you a teacher? Please contact us for assistance.</p>
   <h1>Starred Teachers</h1>
   <table>
     <tr> 
