--- a/app/templates/student.html
+++ b/app/templates/student.html
@@ -3,54 +3,54 @@
 
 {% block content %}
 <div class="container-xxl my-4 bd-layout">
-  <h1>Starred Teachers</h1>
-  <table>
-    <tr> 
-      <th>Remove</th>
-      <th>Teacher</th>
-      <th>Classes Taught</th>
-    </tr>
-    {% for teacher_id, teacher_name, classes_taught in starred_teachers %}
-    <tr>
-      <td>
-        <form action="/student" method="POST">
-          <input type="submit" value="x">
-          <input type="hidden" name="remove_star" value={{teacher_id}}>
-        </form>
-      </td>
-      <td><a href="/view_teacher/{{teacher[1]}}">{{teacher_name}}</a></td> <!-- this will link to the teacher's profile -->
-      <td>{{classes_taught}}</td>
-      <td></td> <!-- this will link to the teacher's profile -->
-    </tr>
-    {% endfor %}
-  </table> <br>
-
-
-  <h1>Find Teachers To Star</h1>
-
-  <form action="/search" method="POST">
-    <input type="text" name="teacher" placeholder="Search...">
-    <input type="submit" value="Search">
-  </form>
-
-  <form action="/student" method="POST">
+    <h1>Starred Teachers</h1>
     <table>
-      <tr> 
-        <th>Star</th>
-        <th>Teacher</th>
-        <th>Classes Taught</th>
-      </tr>
-      {% for teacher in teacher_list %}
-      <tr>
-        <td>
-          <input type="checkbox" name="starred_id" value={{teacher[0]}}>
-        </td>
-        <td><a href="/view_teacher/{{teacher[1]}}">{{teacher[1]}}</a></td> <!-- this will link to the teacher's profile -->
-        <td>{{teacher[3], teacher[4], teacher[5], teacher[6], teacher[7], teacher[8], teacher[9], teacher[10], teacher[11], teacher[12]}}</td> <!--needs to be formatted-->
-      </tr>
-      {% endfor %}
-    </table>
-    <input type="submit" value="Submit">
-  </form>
+        <tr>
+            <th>Remove</th>
+            <th>Teacher</th>
+            <th>Classes Taught</th>
+        </tr>
+        {% for teacher_id, teacher_name, classes_taught in starred_teachers %}
+        <tr>
+            <td>
+                <form action="/student" method="POST">
+                    <input type="submit" value="x">
+                    <input type="hidden" name="remove_star" value={{teacher_id}}>
+                </form>
+            </td>
+            <td><a href="/view_teacher/{{teacher[1]}}">{{teacher_name}}</a></td> <!-- this will link to the teacher's profile -->
+            <td>{{classes_taught}}</td>
+            <td></td> <!-- this will link to the teacher's profile -->
+        </tr>
+        {% endfor %}
+    </table> <br>
+
+
+    <h1>Find Teachers To Star</h1>
+
+    <form action="{{search}}" method="POST">
+        <input type="text" name="teacher" placeholder="Search...">
+        <input type="submit" value="Search">
+    </form>
+
+    <form action="/student" method="POST">
+        <table>
+            <tr>
+                <th>Star</th>
+                <th>Teacher</th>
+            </tr>
+            {% for id, name in teacher_list %}
+            <tr>
+                <td>
+                    <input type="checkbox" name="starred_id" value={{id}}>
+                </td>
+                <td>
+                    <a href="{{url_for("view_teacher", hex=id)}}">{{name}}</a>
+                </td>
+            </tr>
+            {% endfor %}
+        </table>
+        <input type="submit" value="Submit">
+    </form>
 </div>
 {% endblock %}
